# FlowNote

./: .gitignore  AGENT.md  AGENTS.md  README.md
LocalDev/: README.md  start-local-service.sh
LocalDev/launchagents/: com.flownote.local.api.plist  com.flownote.local.web.plist
apps/: README.md
apps/android/: README.md
docs/: README.md  api.md  architecture.md  data-model.md  decisions.md  deployment.md  development-access.md  implementation-roadmap.md  mvp-scope.md  product-overview.md  security.md  system-map.md  verification.md  만들고자하는이유.txt  현장소리.txt  현장에서하는일.txt
scripts/: verify-preserved-tests.ps1
server/: README.md
services/: README.md
services/api/: .env.example  README.md  init.sql  package-lock.json  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/api/v1/: auth.py  document_access_logs.py  documents.py  field_comments.py  field_notes.py  health.py  reports.py  router.py  tags.py  work_sequences.py
services/api/app/core/: __init__.py  auth.py  config.py  storage.py
services/api/app/db/: __init__.py  init_db.py  models.py  session.py
services/api/db/: README.md
services/api/db/migrations/: 0001_initial_mvp_schema.md
services/api/legacy-node/: README.md  package.json
services/api/legacy-node/src/: auth.js
services/api/src/: db.js  server.js
services/api/tests/: README.md  test_auth_api.py  test_database.py  test_document_access_logs_api.py  test_documents_api.py  test_field_comments_api.py  test_field_notes_api.py  test_reports_api.py  test_role_permissions_api.py  test_work_sequences_api.py
(+157 files in other folders)
