[project]
name = "flownote-api"
version = "0.1.0"
description = "FlowNote Python FastAPI server"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "alembic>=1.14"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.8"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
