[project]
name = "flownote-api"
version = "0.1.0"
description = "FlowNote Python FastAPI server"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0",
  "alembic>=1.14"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx2>=0.28",
  "pillow>=11.0",
  "reportlab>=4.2",
  "ruff>=0.8"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
